  - Disk access LED and desktop-resolution options
  - AVI video length (mins:secs) is shown in titlebar during recording
  - Option for cropping statusbar from videos & screenshots
  - Fileselector scrollbar can be used with mouse
  - YM mixing method selection
- Debugging improvements:
  - New disassembler with more Motorola like syntax
  - Option to disable Falcon mic
    ("--mic off" is needed for Mudflap debugging)
  - "--run-vbls" can be set also at run-time
  - "--bios-intercept" can be toggled from debugger (not just enabled)
  - BIOS CON: output is converted to ASCII and redirected to host console
    with the --bios-intercept option
  - Support for tracing DSP, Videl and Crossbar
  - Support for tracing AES calls.  VDI calls can now be traced
    also without using an extended VDI resolution
  - BIOS/XBIOS/GEMDOS/VDI/AES/Line-A/Line-F opcode breakpoint support
  - TEXT, DATA and BSS variables for addresses of corresponding segments
    in currently loaded program
  - "aes", "vdi" and "gemdos" subcommands for "info".  Without arguments
    they will output information about corresponding OS part state,
    with (a non-zero) argument, opcode/call name table is shown.
    "video" subcommand for showing video related information.
    "cookiejar" subcommand for showing cookiejar contents.
  - "file" subcommand to "lock" that executes debugger commands from
    given file when debugger is entered (or ":lock" breakpoint is hit)
  - ":lock" option to breakpoints that will show (without stopping the
    emulation) the same output as what's shown on entering the debugger
  - ":file" option to breakpoints that executes the commands from
    given file when the breakpoint is hit. This can be used to chain
    debugger actions
  - multiple breakpoints options can be specified per breakpoint
  - parenthesis in "evaluate" command are used to indicate memory
    accesses (instead of operator precedence like earlier)