@@ -70,11 +70,11 @@ Other potential Hatari functionality improvements
 	- All DebugUI invocations should give reason for it
 	  (exception, breakpoint...)
 	- All parsing functions should return error code on error
+	- Eval_Number() could take DSP/CPU flag like Eval_Range()
+	  does so that all commands taking numeric args can accept
+	  also symbol, variable & register names
 	- Skip & tell user to rename any of the loaded symbols that
 	  have same name as internal Hatari variables
-	- Eval_Range() should take DSP/CPU flag so that ranges
-	  (used by "m" and "d" commands) can accept symbol,
-	  variable & register names
 	- Change "" for expressions to {} so that quotes can
 	  be used for e.g. search strings?
 
